# POC_GPD_OMS

./: .gitignore  2026年_資訊技術分公司_範疇三業務管理報表_20260511.xlsx  2026年_資訊技術分公司_範疇三業務管理報表_20260513.xlsx  DAYLOG_20260513.md  Python化系統設計與欄位規格_v0.1.md  README.md  SCOPE3_Report_GE115_各單位績效_20260511_0843.xlsx  Scope3_KPI_Formula_Table.xlsx  scope3-ghg.cmd  scope3-ghg.ps1  永續性設計原則Sustainability_Design_Principles_Aligned_v1.4.docx
docs/: Excel_欄位治理說明表_Scope3.xlsx  SCOPE3_GHG_Report_20260512(穏定).txt  Scope3_Column_Mapping.xlsx  每日工作紀錄（Day Log）填報規範_20260415_現用版.docx
scope3_ghg/: README.md  analyze_kpi.py  compare_sheets.py  compare_xlsx.py  pyproject.toml  requirements-offline.txt  比對判定報告_20260513.md
scope3_ghg/inputs/: README.md
scope3_ghg/outputs/: SCOPE3_Report_GE115_各單位績效_20260513_1501.xlsx  SCOPE3_Report_GE115_各單位績效_20260513_1504.xlsx  SCOPE3_Report_GE115_各單位績效_20260513_1510.xlsx  SCOPE3_Report_GE115_各單位績效_20260513_1514.xlsx  SCOPE3_Report_GE115_各單位績效_20260513_1535.xlsx  SCOPE3_Report_GE115_各單位績效_20260513_1616.xlsx  SCOPE3_Report_GE115_各單位績效_20260513_1620.xlsx  SCOPE3_Report_GE115_各單位績效_20260513_1636.xlsx  SCOPE3_Report_GE115_各單位績效_20260513_1641.xlsx
scope3_ghg/src/scope3_ghg/: __init__.py  aggregators.py  cli.py  config.py  kpi.py  models.py  normalize.py  pipeline.py  reader.py
scope3_ghg/src/scope3_ghg/reports/: __init__.py  exception_report.py  matrix_report.py  performance_report.py  style.py  summary_report.py
scope3_ghg/tests/: test_kpi.py  test_mapping.py  test_normalize.py  test_reader.py  test_reports.py
